--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,6 +1,7 @@
-FROM ubuntu 
-
-RUN /bin/bash -c 'echo This would generally be apt-get or other system config'
-
-ENV myCustomEnvVar="This is also a sample." \
-    otherEnvVar="This is also a sample."
+FROM node:6
+RUN mkdie -p C:/programs
+WORKDIR C:/programs
+RUN gradle install
+COPY . C:/programs
+EXPOSE 4200
+CMD ["gradle","start"]
