--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,7 +1,4 @@
-FROM node:6
-RUN mkdie -p C:/programs
-WORKDIR C:/programs
-RUN gradle install
-COPY . C:/programs
-EXPOSE 4200
-CMD ["gradle","start"]
+FROM tomcat:7
+
+COPY C:\\Apps\\Jenkins\\jobs\\gradle-pipeline\\workspace\\build\\libs\\*.war C:\\apache-tomcat-7.0.94\\webapps
+
