--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,18 @@ apply plugin: 'java'
 apply plugin: 'war' 
 apply plugin: 'jetty' 
 apply plugin: 'eclipse-wtp'
-apply plugin: 'com.palantir.docker'
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.0"
+  }
+}
+
+apply plugin: "com.palantir.docker"
 
 
 
