--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,13 @@ buildscript {
     }
 }
 
-
-
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.0"
+  }
+}
