--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'java' 
 apply plugin: 'war' 
 apply plugin: 'jetty' 
-apply plugin: "com.palantir.docker"
 apply plugin: 'eclipse-wtp'
 
 
@@ -21,8 +20,10 @@ buildscript {
     }
     dependencies {
         classpath 'org.gradle.api.plugins:gradle-cloudbees-plugin:0.1'
-        classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.0"
+        c
     }
 }
 
-
+plugins {
+    id 'com.palantir.docker' version '0.22.0'
+}
