--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ def d=project.hasProperty('pay');
 test {
   useTestNG()
   {
-     dependsOn cleanTest()
+     dependsOn cleanTest
      useDefaultListeners = true
      if(d)
      {
