--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'cloudbees'
 buildscript {
     repositories {
         mavenCentral()
+	maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath 'org.gradle.api.plugins:gradle-cloudbees-plugin:0.1'
