--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java' 
 apply plugin: 'war' 
-apply plugin: 'gretty'
+apply plugin: 'jetty'
 apply plugin: 'eclipse-wtp'
 apply plugin: "com.palantir.docker"
 apply plugin: 'org.sonarqube'
